# edit_distance_cpp

./: .gitignore  CMakeLists.txt  README.md  editDistance.kdev4  editdistance-config.cmake
Test/: test_levenshtein.cpp  test_normalized.cpp  test_normilazedc11.cpp
include/: Levenshtein.hpp  NormalizedEditDistance.hpp
